--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link
-      rel="icon"
-      href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Crect width='64' height='64' rx='12' fill='%23fff'/%3E%3Cg transform='translate(0,-6)'%3E%3Cpath d='M6 40 Q32 23 58 40' stroke='%23e67e22' stroke-width='4' fill='none'/%3E%3Ccircle cx='20' cy='48' r='6' fill='%232c3e50'/%3E%3Ccircle cx='44' cy='48' r='6' fill='%232c3e50'/%3E%3C/g%3E%3C/svg%3E"
-    />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="64x64" href="/icons/icon.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/icons/icon.png" />
     <meta
       property="og:title"
       content="Sadguru Balumama Self Drive Car Rental"
@@ -15,7 +12,9 @@
       property="og:description"
       content="Discover the best deals you'll ever find with our unbeatable offers. We're dedicated to providing you with the best value for your money, so you can enjoy top-quality services and products without breaking the bank. Our deals are designed to give you the ultimate renting experience, so don't miss out on your chance to save big."
     />
-    <meta property="og:image" content="/apple-touch-icon.png" />
+    <meta property="og:image" content="/icons/icon.png" />
+    <meta property="og:image:width" content="64" />
+    <meta property="og:image:height" content="64" />
     <meta property="og:type" content="website" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
