--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,9 @@
       property="og:description"
       content="Discover the best deals you'll ever find with our unbeatable offers. We're dedicated to providing you with the best value for your money, so you can enjoy top-quality services and products without breaking the bank. Our deals are designed to give you the ultimate renting experience, so don't miss out on your chance to save big."
     />
-    <meta property="og:image" content="/icons/icon.png" />
-    <meta property="og:image:width" content="64" />
-    <meta property="og:image:height" content="64" />
+    <meta property="og:image" content="/icons/social-share.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
     <meta property="og:type" content="website" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
