Add Google site verification meta tag for improved SEO

--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,8 @@
 
     <link rel="stylesheet" href="../src/dist/styles.css" />
 
+    <meta name="google-site-verification" content="MNxedPxUvkO1GPfpIJOlSF-_PtR6JDjHRjcjCPm6gec" />
+
     <title>Sadguru Balumama Self Drive Car Rental</title>
   </head>
   <body>
