--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/png" sizes="64x64" href="/icons/logo.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/icons/logo.png" />
+    <link rel="icon" type="image/png" sizes="64x64" href="/icons/icon.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/icons/icon.png" />
     <meta
       property="og:title"
       content="Sadguru Balumama Self Drive Car Rental"
@@ -12,7 +12,7 @@
       property="og:description"
       content="Discover the best deals you'll ever find with our unbeatable offers. We're dedicated to providing you with the best value for your money, so you can enjoy top-quality services and products without breaking the bank. Our deals are designed to give you the ultimate renting experience, so don't miss out on your chance to save big."
     />
-    <meta property="og:image" content="/icons/logo.png" />
+    <meta property="og:image" content="/icons/icon.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:type" content="website" />
@@ -36,7 +36,10 @@
 
     <link rel="stylesheet" href="../src/dist/styles.css" />
 
-    <meta name="google-site-verification" content="MNxedPxUvkO1GPfpIJOlSF-_PtR6JDjHRjcjCPm6gec" />
+    <meta
+      name="google-site-verification"
+      content="MNxedPxUvkO1GPfpIJOlSF-_PtR6JDjHRjcjCPm6gec"
+    />
 
     <title>Sadguru Balumama Self Drive Car Rental</title>
   </head>
